--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,10 +41,10 @@ jobs:
           echo "=== Build directory contents ==="
           ls -la target/release/
           echo "=== Binary details ==="
-          file target/release/*
+          file target/release/loka-stratum
 
       - name: Upload binary
         uses: actions/upload-artifact@v4
         with:
           name: loka-stratum
-          path: target/release/*
+          path: target/release/loka-stratum
