--- a/monitoring/alertmanager/alertmanager.yml
+++ b/monitoring/alertmanager/alertmanager.yml
@@ -3,27 +3,27 @@ global:
 
 # Route configuration
 route:
-  group_by: ['alertname', 'cluster', 'service']
+  group_by: ["alertname", "cluster", "service"]
   group_wait: 10s
   group_interval: 10s
   repeat_interval: 1h
-  receiver: 'web.hook'
+  receiver: "web.hook"
 
 # Receivers configuration
 receivers:
-  - name: 'web.hook'
+  - name: "web.hook"
     webhook_configs:
-      - url: 'http://webhook.example.com/alerts'
+      - url: "http://webhook.example.com/alerts"
         send_resolved: true
         http_config:
           basic_auth:
-            username: 'admin'
-            password: 'password'
+            username: "admin"
+            password: "password"
 
 # Inhibition rules
 inhibit_rules:
   - source_match:
-      severity: 'critical'
+      severity: "critical"
     target_match:
-      severity: 'warning'
-    equal: ['alertname', 'cluster', 'service']
+      severity: "warning"
+    equal: ["alertname", "cluster", "service"]
