--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "3"
-members = ["stratum", "utils/metrics"]
+members = ["stratum", "utils/metrics", "migration", "model"]
 
 [workspace.package]
 version = "0.1.0"
