--- a/stratum/docker-compose.yml
+++ b/stratum/docker-compose.yml
@@ -10,15 +10,19 @@ services:
       - "3333:3333"
       - "9091:9090"
     environment:
-      - RUST_LOG=trace
+      - DATABASE_URL=postgres://root:root@host.docker.internal:5432/loka
+      - ENV=prod
+      - RUST_LOG=debug
       - RUST_BACKTRACE=${RUST_BACKTRACE:-1}
-    command: sh -c "loka-stratum -c /app/config/loka-stratum.toml start"
+    command: sh -c "loka-stratum start --bind 3333"
     volumes:
       - ./config:/app/config:ro
       - loka-data:/app/data
       - loka-logs:/app/logs
     networks:
       - loka-network
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     healthcheck:
       test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:9090/health"]
       interval: 30s
