--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -89,8 +89,8 @@ jobs:
       - name: Build for CodeQL
         run: cargo build --workspace
 
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v3
+      # - name: Perform CodeQL Analysis
+      #   uses: github/codeql-action/analyze@v3
 
   # Job 3: Unit and Integration Tests
   test:
